app/assets/stylesheets/style.css
/* ... */
.slide-count {
    position: relative;
    width: 100%;
    font-family: var(--body-font);
    font-weight: 400;
    font-size: 1.2em;
    color: var(--mid-gray);
    text-align: center;
    margin-top: 20px;
    margin-bottom: 50px;

}

.list-asset {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
    max-width: 700px;
    font-family: var(--body-font);
    font-weight: 300;
    font-size: 1.2em;
    color: var(--dark-gray);
    line-height: 1.8em; /* 1.2 * 1.5 */
    margin: 29px 0;
    margin-top: 0;
}

.list-asset li {
    margin: 1.2em 0;
}

.list-asset li:first-child {
    margin-top: 0;
}

.section-divider-asset hr {
    margin-top: 52px;
    margin-bottom: 42px;
    border: none;
    text-align: center;
}

.section-divider-asset hr:before {
    --x-height-multiplier: 0.363;
    --baseline-multiplier: 0.157;
    font-family: var(--body-font-italic);
    font-weight: 400;
    font-size: 1.2em;
    letter-spacing: .6em;
    content: '...';
    display: inline-block;
    margin-left: .6em;
    color: var(--mid-gray);
    position: relative;
    top: -30px;
}

span.code {
    font-family: var(--code-font);
}

.design-block,
.design-block-double {
    position: relative;
    width: 100%;
    margin: 100px 0;
    margin-bottom: 50px;
    display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
	display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  	display: -ms-flexbox;  /* TWEENER - IE 10 */
  	display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
  	display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    -moz-flex-direction: row;
    flex-direction: row;
    -webkit-justify-content: space-between;
    -ms-align-justify-content: space-between;
    -moz-justify-content: space-between;
    justify-content: space-between;
}

.design-block-double {
    margin: 200px 0;
}

.design-block .block-image,
.design-block .block-video,
.design-block-double .block-image,
.design-block-double .block-video {
    -webkit-flex: 0.50;
    -ms-flex: 0.50;
    -moz-flex: 0.50;
    flex: 0.50;
    padding: 20px;
}

.design-block .block-image img,
.design-block .block-video video,
.design-block-double .block-image img,
.design-block-double .block-video video {
    width: 100%;
    border: 1px solid var(--mid-gray);
    border-radius: 1px;
}

.design-block .block-description {
    -webkit-flex: 0.50;
    -ms-flex: 0.50;
    -moz-flex: 0.50;
    flex: 0.50;
    max-width: 700px;
    font-family: var(--body-font);
    font-weight: 300;
    font-size: 1.2em;
    color: var(--dark-gray);
}

.design-block-text {
    display: block;
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
    max-width: 700px;
    font-family: var(--body-font);
    font-weight: 300;
    font-size: 1.2em;
    color: var(--dark-gray);
    margin-bottom: 50px;
}

.design-video-asset,
.design-image-asset {
    display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
	display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  	display: -ms-flexbox;  /* TWEENER - IE 10 */
  	display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
  	display: flex;
    -webkit-align-items: center;
	-ms-align-items: center;
	-moz-align-items: center;
	align-items: center;
    -webkit-justify-content: center;
    -ms-align-justify-content: center;
    -moz-justify-content: center;
    justify-content: center;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    -moz-flex-direction: column;
    flex-direction: column;
    width: 90%;
    margin: 5%;
    margin-top: 100px;
    margin-bottom: 100px;
}

.design-image-asset.full {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    width: 90vw;
    margin: 0;
}

.design-video,
.design-image-asset img {
    width: 60%;
    border: 1px solid var(--mid-gray);
    border-radius: 1px;
}

.design-image-asset.elongated img,
.design-video.elongated {
    width: 100%;
}

.design-image-asset.full img,
.design-video.full {
    width: 100%;
}

.design-video-caption,
.design-image-caption {
    font-family: var(--body-font);
    font-weight: 300;
    font-size: 0.9em;
    color: var(--mid-gray);
    line-height: 1.5em;
    margin: 10px 0;
    text-align: center;
}

/*========================================== */

/* Music Dialog and Video Dialog */

.music-dialog-content,
.video-dialog-content {
	width: 90vw !important;
    max-width: none !important;
}

.music-dialog-title,
.video-dialog-title {
	padding-bottom: 0px !important;
	text-align: center;
	font-size: 1.6em !important;
	color: #000000 !important;
	background: var(--white);
	font-weight: 600 !important;
	font-family: var(--heading-font);
}

.music-dialog-body,
.video-dialog-body {
    display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
	display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  	display: -ms-flexbox;  /* TWEENER - IE 10 */
  	display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
  	display: flex;
    position: relative;
	width: 90vw  !important;
    height: 90vh !important;
	padding: 10% !important;
    -webkit-align-items: center;
	-ms-align-items: center;
	-moz-align-items: center;
	align-items: center;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    -moz-flex-direction: column;
    flex-direction: column;
    overflow-x: visible !important;
    overflow-y: scroll !important;
}

.music-dialog-actions,
.video-dialog-actions {
	padding: 0 !important;
}

.music-wrapper {
    position: absolute;
    top: auto;
    left: auto;
    transform: none;
    width: 80%;
}

.video-wrapper {
    position: relative;
    width: 80%;
}
/* ... */

